--- a/src/Components/UpdateProfile/UpdateProfile.css
+++ b/src/Components/UpdateProfile/UpdateProfile.css
@@ -9,6 +9,27 @@
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+.modal-shadow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: scroll !important;
+  z-index: 5;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+
+.modal-content {
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Shadow effect */
+  padding: 20px;
+  width: 800px;
+}
 
 .form-container label {
   margin-top: 10px;
